--- a/index.html
+++ b/index.html
@@ -5,185 +5,141 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Public Policy Cost Dashboard</title>
 <style>
+    :root{
+        --card-bg:#f9f9f9;
+        --red:#a00000;
+        --red-light:#ffecec;
+        --shadow:0 4px 12px rgba(0,0,0,.05);
+        --radius:1rem;
+        --gap:2rem;
+        --max-width:1440px;
+    }
     *{box-sizing:border-box;}
     body,html{
-        height:100vh;
         margin:0;
         padding:0;
         font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
         display:flex;
         flex-direction:column;
         align-items:center;
+        min-height:100vh;
+        gap:var(--gap);
     }
-    h1{
-        font-size:3vw;
-        font-weight:800;
-        margin:2vh 0 1vh;
-    }
-    .description-text{
-        font-size:1.2vw;
-        color:#444;
-        max-width:80ch;
-        text-align:center;
-        margin-bottom:3vh;
-    }
-    #policies{
+    h1{margin:1rem 0 0; font-size:clamp(1.8rem,4vw,3rem);font-weight:800;text-align:center;}
+    .description{max-width:var(--max-width);text-align:center;color:#555;font-size:clamp(.9rem,1.1vw,1.1rem);line-height:1.4;}
+    .grid{
         width:100%;
+        max-width:var(--max-width);
         display:grid;
         grid-template-columns:repeat(auto-fit,minmax(320px,1fr));
-        gap:2vh 2vw;
-        padding:0 2vw;
+        gap:var(--gap);
+        padding:0 var(--gap);
     }
-    .policy-section{
-        background:#f9f9f9;
-        padding:2vh 2vw;
-        border-radius:1vw;
-        box-shadow:0 0.5vh 1.5vh rgba(0,0,0,0.05);
+    .card{
+        background:var(--card-bg);
+        border-radius:var(--radius);
+        box-shadow:var(--shadow);
+        padding:1.5rem;
+        display:flex;
+        flex-direction:column;
+        align-items:center;
+        gap:1rem;
+    }
+    .card h2{
+        margin:0;
+        font-size:clamp(1rem,1.3vw,1.4rem);
         text-align:center;
     }
-    .policy-title{
-        font-size:1.6vw;
-        font-weight:600;
-        margin-bottom:1vh;
-    }
+    .current-value{font-weight:600;font-size:.95rem;}
+    input[type="range"]{width:100%;cursor:pointer;}
+    .range-labels{width:100%;display:flex;justify-content:space-between;font-size:.85rem;color:#555;}
     .cost-text{
-        font-size:1.4vw;
-        background:#ffecec;
-        border:0.2vw solid #ff4d4d;
-        color:#a00000;
-        padding:1vh 2vw;
-        border-radius:1vw;
+        font-size:clamp(1rem,1.3vw,1.4rem);
+        background:var(--red-light);
+        border:3px solid #ff4d4d;
+        color:var(--red);
+        padding:.6rem 1.2rem;
+        border-radius:var(--radius);
         font-weight:600;
-        display:inline-block;
-        margin-top:1vh;
+        text-align:center;
     }
     .total-box{
         background:#fff3f3;
-        padding:2vh 2vw;
-        border-radius:1vw;
-        border:0.2vw solid #ffcccc;
-        text-align:center;
-        box-shadow:0 0.5vh 1.5vh rgba(0,0,0,0.1);
-        margin:3vh 0 2vh;
+        border:3px solid #ffcccc;
+        border-radius:var(--radius);
+        padding:1rem 2rem;
+        box-shadow:var(--shadow);
+        margin-bottom:2rem;
     }
-    .total-text{
-        font-size:2.5vw;
-        color:#a00000;
-        font-weight:bold;
-        margin:0;
-    }
-    input[type=range]{
-        width:100%;
-        margin:1vh 0;
-    }
-    @media (max-width:768px){
-        h1{font-size:6vw;}
-        .policy-title{font-size:4vw;}
-        .cost-text{font-size:4vw;}
-        .total-text{font-size:6vw;}
-        .description-text{font-size:3.5vw;}
+    .total-text{font-size:clamp(1.4rem,2.5vw,2.8rem);font-weight:700;color:var(--red);}
+    @media(max-width:600px){
+        .range-labels{font-size:.75rem;}
+        .current-value{font-size:.85rem;}
     }
 </style>
 </head>
 <body>
     <h1>Public Policy Cost Dashboard</h1>
-    <p class="description-text">Use the interactive sliders below to model projected costs associated with various public policy options. Each change dynamically updates the estimated government expenditure.</p>
-    <div id="policies"></div>
-    <div class="total-box"><p id="total-text" class="total-text">Total Estimated Cost: $0</p></div>
+    <p class="description">Use the interactive sliders below to model projected costs associated with various public policy options. Each change dynamically updates the estimated government expenditure.</p>
+
+    <div id="grid" class="grid"></div>
+
+    <div class="total-box">
+        <div class="total-text">Total Estimated Cost: <span id="totalValue">$0</span></div>
+    </div>
 
 <script>
-const policies = [
-  {
-    name: "Increase Average Student Test Scores (NAEP scale)",
-    domain_min: 250,
-    domain_max: 300,
-    step: 1,
-    func: "1500000 * ((x - 250) ** 2)"
-  },
-  {
-    name: "Reduce Adult Recidivism Rate (%)",
-    domain_min: 10,
-    domain_max: 40,
-    step: 1,
-    func: "3000000 * ((40 - x) ** 1.5)"
-  },
-  {
-    name: "Expand Broadband Access (% of rural population)",
-    domain_min: 50,
-    domain_max: 100,
-    step: 5,
-    func: "5000000 * Math.log1p(x - 50)"
-  },
-  {
-    name: "Increase Vaccination Rate (% population)",
-    domain_min: 70,
-    domain_max: 95,
-    step: 1,
-    func: "2000000 * ((x - 70) ** 1.8)"
-  },
-  {
-    name: "Improve Air Quality Index (AQI reduction)",
-    domain_min: 0,
-    domain_max: 30,
-    step: 1,
-    func: "1000000 * (x ** 2)"
-  }
+const policies=[
+  {name:"Increase Average Student Test Scores (NAEP scale)",domain_min:250,domain_max:300,step:1,func:"1500000 * ((x - 250) ** 2)"},
+  {name:"Reduce Adult Recidivism Rate (%)",domain_min:10,domain_max:40,step:1,func:"3000000 * (40 - x) ** 1.5"},
+  {name:"Expand Broadband Access (% of rural population)",domain_min:50,domain_max:100,step:5,func:"5000000 * math.log1p(x - 50)"},
+  {name:"Increase Vaccination Rate (% population)",domain_min:70,domain_max:95,step:1,func:"2000000 * ((x - 70) ** 1.8)"},
+  {name:"Improve Air Quality Index (AQI reduction)",domain_min:0,domain_max:30,step:1,func:"1000000 * (x ** 2)"}
 ];
 
-function evaluate(fn, x){
-    return Function('x','Math','return '+fn)(x,Math);
-}
+function jsExpr(expr){return expr.replace(/math\./gi,'Math.');}
+function evaluate(expr,x){return Function('x','Math',`return ${jsExpr(expr)};`)(x,Math);}  // secure-ish quick eval
+function roundCost(v){return Math.round(v/100000)*100000;}
 
-function roundCost(val){
-    return Math.round(val/100000)*100000;
-}
-
-function format(val){
-    return val.toLocaleString('en-US',{style:'currency',currency:'USD',maximumFractionDigits:0});
-}
-
-function buildUI(){
-    const container=document.getElementById('policies');
-    policies.forEach((policy,idx)=>{
-        const section=document.createElement('div');
-        section.className='policy-section';
-        const title=document.createElement('div');
-        title.className='policy-title';
-        title.textContent=policy.name;
-        const slider=document.createElement('input');
-        slider.type='range';
-        slider.min=policy.domain_min;
-        slider.max=policy.domain_max;
-        slider.step=policy.step;
-        slider.value=policy.domain_min;
-        slider.id='slider_'+idx;
-        const costText=document.createElement('div');
-        costText.className='cost-text';
-        costText.id='cost_'+idx;
-        costText.textContent='Estimated Cost: '+format(roundCost(evaluate(policy.func, slider.value)));
-        section.appendChild(title);
-        section.appendChild(slider);
-        section.appendChild(costText);
-        container.appendChild(section);
-
-        slider.addEventListener('input',()=>{
-            costText.textContent='Estimated Cost: '+format(roundCost(evaluate(policy.func, slider.value)));
-            updateTotal();
-        });
-    });
-    updateTotal();
-}
+const gridEl=document.getElementById('grid');
+const individualCosts={};
 
 function updateTotal(){
-    let total=0;
-    policies.forEach((policy,idx)=>{
-        const val=document.getElementById('slider_'+idx).value;
-        total+=roundCost(evaluate(policy.func, val));
-    });
-    document.getElementById('total-text').textContent='Total Estimated Cost: '+format(total);
+    const total=Object.values(individualCosts).reduce((a,b)=>a+b,0);
+    document.getElementById('totalValue').textContent='$'+total.toLocaleString();
 }
 
-document.addEventListener('DOMContentLoaded',buildUI);
+policies.forEach((p,i)=>{
+    const min=p.domain_min,max=p.domain_max,step=p.step;
+    const minCost=evaluate(p.func,min);
+    const maxCost=evaluate(p.func,max);
+    const startVal=minCost===0?min:maxCost===0?max:min;
+    const card=document.createElement('div');card.className='card';
+
+    const title=document.createElement('h2');title.textContent=p.name;card.appendChild(title);
+
+    const current=document.createElement('span');current.className='current-value';current.textContent=`Current Value: ${startVal}`;card.appendChild(current);
+
+    const slider=document.createElement('input');slider.type='range';slider.min=min;slider.max=max;slider.step=step;slider.value=startVal;card.appendChild(slider);
+
+    const labels=document.createElement('div');labels.className='range-labels';labels.innerHTML=`<span>${min}</span><span>${max}</span>`;card.appendChild(labels);
+
+    const costText=document.createElement('div');costText.className='cost-text';card.appendChild(costText);
+
+    function refresh(val){
+        current.textContent=`Current Value: ${val}`;
+        const costRaw=evaluate(p.func,Number(val));
+        const cost=roundCost(costRaw);
+        costText.textContent=`Estimated Cost: $${cost.toLocaleString()}`;
+        individualCosts[p.name]=cost;
+        updateTotal();
+    }
+
+    slider.addEventListener('input',e=>refresh(e.target.value));
+    refresh(startVal);
+
+    gridEl.appendChild(card);
+});
 </script>
 </body>
 </html>
