--- a/index.html
+++ b/index.html
@@ -12,70 +12,34 @@
         --shadow:0 4px 12px rgba(0,0,0,.05);
         --radius:1rem;
         --gap:2rem;
-        --max-width:1440px;
+        --max-width:1600px;
     }
-    *{box-sizing:border-box;}
+    *{box-sizing:border-box;margin:0;padding:0;}
     body,html{
-        margin:0;
-        padding:0;
         font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
-        display:flex;
-        flex-direction:column;
-        align-items:center;
-        min-height:100vh;
-        gap:var(--gap);
+        display:flex;flex-direction:column;align-items:center;min-height:100vh;gap:var(--gap);
     }
-    h1{margin:1rem 0 0; font-size:clamp(1.8rem,4vw,3rem);font-weight:800;text-align:center;}
-    .description{max-width:var(--max-width);text-align:center;color:#555;font-size:clamp(.9rem,1.1vw,1.1rem);line-height:1.4;}
-    .grid{
-        width:100%;
-        max-width:var(--max-width);
-        display:grid;
-        grid-template-columns:repeat(auto-fit,minmax(320px,1fr));
-        gap:var(--gap);
-        padding:0 var(--gap);
-    }
-    .card{
-        background:var(--card-bg);
-        border-radius:var(--radius);
-        box-shadow:var(--shadow);
-        padding:1.5rem;
-        display:flex;
-        flex-direction:column;
-        align-items:center;
-        gap:1rem;
-    }
-    .card h2{
-        margin:0;
-        font-size:clamp(1rem,1.3vw,1.4rem);
-        text-align:center;
-    }
-    .current-value{font-weight:600;font-size:.95rem;}
-    input[type="range"]{width:100%;cursor:pointer;}
-    .range-labels{width:100%;display:flex;justify-content:space-between;font-size:.85rem;color:#555;}
-    .cost-text{
-        font-size:clamp(1rem,1.3vw,1.4rem);
-        background:var(--red-light);
-        border:3px solid #ff4d4d;
-        color:var(--red);
-        padding:.6rem 1.2rem;
-        border-radius:var(--radius);
-        font-weight:600;
-        text-align:center;
-    }
-    .total-box{
-        background:#fff3f3;
-        border:3px solid #ffcccc;
-        border-radius:var(--radius);
-        padding:1rem 2rem;
-        box-shadow:var(--shadow);
-        margin-bottom:2rem;
-    }
-    .total-text{font-size:clamp(1.4rem,2.5vw,2.8rem);font-weight:700;color:var(--red);}
-    @media(max-width:600px){
-        .range-labels{font-size:.75rem;}
-        .current-value{font-size:.85rem;}
-    }
+    h1{font-size:clamp(1.8rem,4vw,3rem);font-weight:800;text-align:center;margin-top:1.2rem;}
+    .description{max-width:var(--max-width);text-align:center;color:#555;font-size:clamp(.9rem,1.1vw,1.1rem);line-height:1.4;padding:0 1rem;}
+    .grid{width:100%;max-width:var(--max-width);display:grid;grid-template-columns:repeat(auto-fit,minmax(360px,1fr));gap:var(--gap);padding:0 var(--gap);}    
+    .card{background:var(--card-bg);border-radius:var(--radius);box-shadow:var(--shadow);padding:1.8rem;display:flex;flex-direction:column;align-items:center;gap:1.4rem;}
+    .card h2{font-size:clamp(1rem,1.35vw,1.5rem);text-align:center;font-weight:700;}
+
+    /* slider wrapper */
+    .range-wrap{width:100%;position:relative;padding-top:2.2rem;} /* leaves space for value label */
+    input[type=range]{width:100%;cursor:pointer;margin:0;}
+    .value-float{position:absolute;top:0;font-weight:700;font-size:.95rem;transform:translateX(-50%);white-space:nowrap;}
+    .range-labels{width:100%;display:flex;justify-content:space-between;font-size:.85rem;color:#555;margin-top:.3rem;}
+
+    /* cost box */
+    .cost-text{font-size:clamp(1rem,1.3vw,1.4rem);background:var(--red-light);border:3px solid #ff4d4d;color:var(--red);padding:.6rem 1.2rem;border-radius:var(--radius);font-weight:600;text-align:center;}
+    .cost-number{display:block;margin-top:.2rem;}
+
+    /* total */
+    .total-box{background:#fff3f3;border:3px solid #ffcccc;border-radius:var(--radius);padding:1rem 2rem;box-shadow:var(--shadow);margin-bottom:2rem;}
+    .total-text{font-size:clamp(1.4rem,2.5vw,2.8rem);font-weight:700;color:var(--red);text-align:center;}
+
+    @media(max-width:600px){.range-labels{font-size:.75rem;}}
 </style>
 </head>
 <body>
@@ -84,9 +48,7 @@
 
     <div id="grid" class="grid"></div>
 
-    <div class="total-box">
-        <div class="total-text">Total Estimated Cost: <span id="totalValue">$0</span></div>
-    </div>
+    <div class="total-box"><div class="total-text">Total Estimated Cost: <span id="totalValue">$0</span></div></div>
 
 <script>
 const policies=[
@@ -97,47 +59,57 @@ const policies=[
   {name:"Improve Air Quality Index (AQI reduction)",domain_min:0,domain_max:30,step:1,func:"1000000 * (x ** 2)"}
 ];
 
+// Helpers
 function jsExpr(expr){return expr.replace(/math\./gi,'Math.');}
-function evaluate(expr,x){return Function('x','Math',`return ${jsExpr(expr)};`)(x,Math);}  // secure-ish quick eval
+function evaluate(expr,x){return Function('x','Math',`return ${jsExpr(expr)};`)(x,Math);}  // quick eval
 function roundCost(v){return Math.round(v/100000)*100000;}
+function detectUnit(name){return name.includes('%')?'%':'';}
 
 const gridEl=document.getElementById('grid');
 const individualCosts={};
 
-function updateTotal(){
-    const total=Object.values(individualCosts).reduce((a,b)=>a+b,0);
-    document.getElementById('totalValue').textContent='$'+total.toLocaleString();
-}
+function updateTotal(){const total=Object.values(individualCosts).reduce((a,b)=>a+b,0);document.getElementById('totalValue').textContent='$'+total.toLocaleString();}
 
-policies.forEach((p,i)=>{
-    const min=p.domain_min,max=p.domain_max,step=p.step;
-    const minCost=evaluate(p.func,min);
-    const maxCost=evaluate(p.func,max);
+policies.forEach(p=>{
+    const {domain_min:min,domain_max:max,step}=p;
+    const unit=detectUnit(p.name);
+    const minCost=evaluate(p.func,min);const maxCost=evaluate(p.func,max);
     const startVal=minCost===0?min:maxCost===0?max:min;
-    const card=document.createElement('div');card.className='card';
 
+    // card skeleton
+    const card=document.createElement('div');card.className='card';
     const title=document.createElement('h2');title.textContent=p.name;card.appendChild(title);
 
-    const current=document.createElement('span');current.className='current-value';current.textContent=`Current Value: ${startVal}`;card.appendChild(current);
+    // range wrap
+    const wrap=document.createElement('div');wrap.className='range-wrap';card.appendChild(wrap);
 
-    const slider=document.createElement('input');slider.type='range';slider.min=min;slider.max=max;slider.step=step;slider.value=startVal;card.appendChild(slider);
+    // floating value label
+    const float=document.createElement('span');float.className='value-float';wrap.appendChild(float);
 
-    const labels=document.createElement('div');labels.className='range-labels';labels.innerHTML=`<span>${min}</span><span>${max}</span>`;card.appendChild(labels);
+    // slider
+    const slider=document.createElement('input');slider.type='range';slider.min=min;slider.max=max;slider.step=step;slider.value=startVal;wrap.appendChild(slider);
 
+    // endpoints
+    const labels=document.createElement('div');labels.className='range-labels';labels.innerHTML=`<span>${min}${unit}</span><span>${max}${unit}</span>`;card.appendChild(labels);
+
+    // cost box
     const costText=document.createElement('div');costText.className='cost-text';card.appendChild(costText);
 
     function refresh(val){
-        current.textContent=`Current Value: ${val}`;
+        // update slider value label
+        const percent=(val-min)/(max-min);
+        float.style.left=`calc(${percent*100}% )`;
+        float.textContent=`${val}${unit}`;
+
+        // calculate cost
         const costRaw=evaluate(p.func,Number(val));
         const cost=roundCost(costRaw);
-        costText.textContent=`Estimated Cost: $${cost.toLocaleString()}`;
-        individualCosts[p.name]=cost;
-        updateTotal();
+        costText.innerHTML=`Estimated Cost:<span class="cost-number">$${cost.toLocaleString()}</span>`;
+        individualCosts[p.name]=cost;updateTotal();
     }
 
-    slider.addEventListener('input',e=>refresh(e.target.value));
+    slider.addEventListener('input',e=>refresh(Number(e.target.value)));
     refresh(startVal);
-
     gridEl.appendChild(card);
 });
 </script>
