--- a/index.html
+++ b/index.html
@@ -17,20 +17,42 @@
         --track-height:6px;
         --blue:#0d6efd;
         --gray:#d3d3d3;
+        --green:#15803d;
+        --green-light:#eafaf0;            /* new */
     }
     *{box-sizing:border-box;margin:0;padding:0;}
-    body,html{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;min-height:100vh;display:flex;flex-direction:column;align-items:center;padding:0 0 var(--gap);}
+    body,html{
+        font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
+        min-height:100vh;
+        display:flex;
+        flex-direction:column;
+        align-items:center;
+        padding:0 0 calc(var(--gap)*2);    /* keeps total box clear of bottom edge */
+    }
     h1{font-size:clamp(1.8rem,4vw,3rem);font-weight:800;text-align:center;margin:1.2rem 0 .6rem;}
     .description{max-width:var(--max-width);text-align:center;color:#555;font-size:clamp(.9rem,1.1vw,1.1rem);line-height:1.4;padding:0 1rem 1.4rem;}
 
     /* GRID with centered orphan row */
     .grid{width:100%;max-width:var(--max-width);display:flex;flex-wrap:wrap;justify-content:center;gap:var(--gap);padding:0 var(--gap);}    
-    .card{flex:1 1 360px;max-width:360px;background:var(--card-bg);border-radius:var(--radius);box-shadow:var(--shadow);padding:1.8rem;display:flex;flex-direction:column;align-items:center;gap:1.6rem;}
+    .card{flex:1 1 360px;max-width:360px;background:var(--card-bg);border-radius:var(--radius);box-shadow:var(--shadow);padding:1.8rem;display:flex;flex-direction:column;align-items:center;gap:1.4rem;}
     .card h2{font-size:clamp(1rem,1.35vw,1.5rem);text-align:center;font-weight:700;}
 
+    /* current value box (green) */
+    .current-box{
+        font-size:.95rem;
+        font-weight:600;
+        background:var(--green-light);
+        border:3px solid var(--green);
+        color:var(--green);
+        padding:.5rem 1rem;
+        border-radius:var(--radius);
+        text-align:center;
+        min-width:200px;
+    }
+
     /* slider wrapper & visuals */
-    .range-wrap{width:100%;position:relative;padding-top:2.4rem;} /* space for floating value */
-    input[type=range]{width:100%;cursor:pointer;margin:0;appearance:none;height:var(--track-height);border-radius:var(--track-height);background:var(--gray);background:linear-gradient(to right,var(--blue) 0 0) no-repeat var(--gray);} /* default gradient will be updated via inline style */
+    .range-wrap{width:100%;position:relative;}
+    input[type=range]{width:100%;cursor:pointer;margin:0;appearance:none;height:var(--track-height);border-radius:var(--track-height);background:linear-gradient(to right,var(--blue) 0%,var(--gray) 0%);} 
 
     input[type=range]::-webkit-slider-runnable-track{height:var(--track-height);border-radius:var(--track-height);background:transparent;}
     input[type=range]::-moz-range-track{height:var(--track-height);border-radius:var(--track-height);background:transparent;}
@@ -38,7 +60,6 @@
     input[type=range]::-webkit-slider-thumb{appearance:none;width:var(--thumb-size);height:var(--thumb-size);border-radius:50%;background:#666;border:3px solid #fff;box-shadow:0 0 2px rgba(0,0,0,.35);margin-top:calc((var(--track-height) - var(--thumb-size))/2);} 
     input[type=range]::-moz-range-thumb{width:var(--thumb-size);height:var(--thumb-size);border:none;border-radius:50%;background:#666;}
 
-    .value-float{position:absolute;top:0;font-weight:700;font-size:.95rem;transform:translateX(-50%);white-space:nowrap;pointer-events:none;transition:left .05s linear;} /* instant follow */
     .range-labels{width:100%;display:flex;justify-content:space-between;font-size:.85rem;color:#555;margin-top:.3rem;}
 
     /* cost box */
@@ -51,7 +72,7 @@
 
     @media(max-width:600px){
         .range-labels{font-size:.75rem;}
-        .cost-text{min-width:unset;}
+        .cost-text,.current-box{min-width:unset;}
     }
 </style>
 </head>
@@ -72,7 +93,7 @@ const policies=[
   {name:"Improve Air Quality Index (AQI reduction)",domain_min:0,domain_max:30,step:1,func:"1000000 * (x ** 2)"}
 ];
 
-function evaluate(expr,x){return Function('x',`return ${expr};`)(x);}  // fast inline evaluator
+function evaluate(expr,x){return Function('x',`return ${expr};`)(x);}
 function roundCost(v){return Math.round(v/100000)*100000;}
 function detectUnit(name){return name.includes('%')?'%':'';}
 
@@ -92,37 +113,28 @@ function createCard(p){
     const card=document.createElement('div');card.className='card';
     const title=document.createElement('h2');title.textContent=p.name;card.appendChild(title);
 
+    /* green current value box */
+    const current=document.createElement('div');current.className='current-box';card.appendChild(current);
+
     const wrap=document.createElement('div');wrap.className='range-wrap';card.appendChild(wrap);
-    const float=document.createElement('span');float.className='value-float';wrap.appendChild(float);
     const slider=document.createElement('input');slider.type='range';Object.assign(slider,{min,max,step,value:startVal});wrap.appendChild(slider);
     const labels=document.createElement('div');labels.className='range-labels';labels.innerHTML=`<span>${min}${unit}</span><span>${max}${unit}</span>`;card.appendChild(labels);
     const costBox=document.createElement('div');costBox.className='cost-text';card.appendChild(costBox);
 
-    // calc % and apply gradient
     function setGradient(val){
         const percent=(val-min)/(max-min)*100;
         slider.style.background=`linear-gradient(to right,var(--blue) 0%,var(--blue) ${percent}%,var(--gray) ${percent}%,var(--gray) 100%)`;
     }
 
-    function positionFloat(val){
-        const percent=(val-min)/(max-min);
-        const sliderRect=slider.getBoundingClientRect();
-        const thumb=parseInt(getComputedStyle(document.documentElement).getPropertyValue('--thumb-size'))||16;
-        const x=percent*(sliderRect.width-thumb)+thumb/2; // thumb center
-        float.style.left=x+'px';
-        float.textContent=`${val}${unit}`;
-    }
-
     function refresh(val){
-        positionFloat(val);
         setGradient(val);
+        current.innerHTML=`Current Value:&nbsp;<strong>${val}${unit}</strong>`;
         const cost=roundCost(evaluate(p.func,val));
         costBox.innerHTML=`Estimated Cost:<span class='cost-number'>$${cost.toLocaleString()}</span>`;
         individualCosts[p.name]=cost;updateTotal();
     }
 
     slider.addEventListener('input',e=>refresh(Number(e.target.value)));
-    window.addEventListener('resize',()=>{positionFloat(Number(slider.value));});
     refresh(startVal);
     gridEl.appendChild(card);
 }
