--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         --blue:#0d6efd;
         --gray:#d3d3d3;
         --green:#15803d;
-        --green-light:#eafaf0;            /* new */
     }
     *{box-sizing:border-box;margin:0;padding:0;}
     body,html{
@@ -27,7 +26,7 @@
         display:flex;
         flex-direction:column;
         align-items:center;
-        padding:0 0 calc(var(--gap)*2);    /* keeps total box clear of bottom edge */
+        padding:0 0 calc(var(--gap)*2); /* extra bottom padding so total never clips */
     }
     h1{font-size:clamp(1.8rem,4vw,3rem);font-weight:800;text-align:center;margin:1.2rem 0 .6rem;}
     .description{max-width:var(--max-width);text-align:center;color:#555;font-size:clamp(.9rem,1.1vw,1.1rem);line-height:1.4;padding:0 1rem 1.4rem;}
@@ -37,18 +36,8 @@
     .card{flex:1 1 360px;max-width:360px;background:var(--card-bg);border-radius:var(--radius);box-shadow:var(--shadow);padding:1.8rem;display:flex;flex-direction:column;align-items:center;gap:1.4rem;}
     .card h2{font-size:clamp(1rem,1.35vw,1.5rem);text-align:center;font-weight:700;}
 
-    /* current value box (green) */
-    .current-box{
-        font-size:.95rem;
-        font-weight:600;
-        background:var(--green-light);
-        border:3px solid var(--green);
-        color:var(--green);
-        padding:.5rem 1rem;
-        border-radius:var(--radius);
-        text-align:center;
-        min-width:200px;
-    }
+    /* current value */
+    .current-value{font-size:.95rem;font-weight:700;color:var(--green);} 
 
     /* slider wrapper & visuals */
     .range-wrap{width:100%;position:relative;}
@@ -72,7 +61,7 @@
 
     @media(max-width:600px){
         .range-labels{font-size:.75rem;}
-        .cost-text,.current-box{min-width:unset;}
+        .cost-text{min-width:unset;}
     }
 </style>
 </head>
@@ -93,7 +82,7 @@ const policies=[
   {name:"Improve Air Quality Index (AQI reduction)",domain_min:0,domain_max:30,step:1,func:"1000000 * (x ** 2)"}
 ];
 
-function evaluate(expr,x){return Function('x',`return ${expr};`)(x);}
+function evaluate(expr,x){return Function('x',`return ${expr};`)(x);}  // inline evaluator
 function roundCost(v){return Math.round(v/100000)*100000;}
 function detectUnit(name){return name.includes('%')?'%':'';}
 
@@ -113,14 +102,15 @@ function createCard(p){
     const card=document.createElement('div');card.className='card';
     const title=document.createElement('h2');title.textContent=p.name;card.appendChild(title);
 
-    /* green current value box */
-    const current=document.createElement('div');current.className='current-box';card.appendChild(current);
+    // current value
+    const current=document.createElement('div');current.className='current-value';card.appendChild(current);
 
     const wrap=document.createElement('div');wrap.className='range-wrap';card.appendChild(wrap);
     const slider=document.createElement('input');slider.type='range';Object.assign(slider,{min,max,step,value:startVal});wrap.appendChild(slider);
     const labels=document.createElement('div');labels.className='range-labels';labels.innerHTML=`<span>${min}${unit}</span><span>${max}${unit}</span>`;card.appendChild(labels);
     const costBox=document.createElement('div');costBox.className='cost-text';card.appendChild(costBox);
 
+    // apply gradient
     function setGradient(val){
         const percent=(val-min)/(max-min)*100;
         slider.style.background=`linear-gradient(to right,var(--blue) 0%,var(--blue) ${percent}%,var(--gray) ${percent}%,var(--gray) 100%)`;
@@ -128,7 +118,7 @@ function createCard(p){
 
     function refresh(val){
         setGradient(val);
-        current.innerHTML=`Current Value:&nbsp;<strong>${val}${unit}</strong>`;
+        current.innerHTML=`Current Value: <strong>${val}${unit}</strong>`;
         const cost=roundCost(evaluate(p.func,val));
         costBox.innerHTML=`Estimated Cost:<span class='cost-number'>$${cost.toLocaleString()}</span>`;
         individualCosts[p.name]=cost;updateTotal();
